--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,9 @@
+2019-12-30 0.0.2
+  * Copy audio in test encodes get more interesting final size estimates
+  * Attempt to make it work on Windows and Mac (untested)
+  * Bugfix: Delete test encode log file when Ctrl-c is pressed
+  * Bugfix: Ensure order of settings so the txs-compare.lua can find estimates
+
+
 2019-12-23 0.0.1
   * Initial release
