--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+2019-12-30 0.0.3
+  * Fix syntax error in setup.py
+  * Print help if no arguments are given
+
+
 2019-12-30 0.0.2
   * Copy audio in test encodes get more interesting final size estimates
   * Attempt to make it work on Windows and Mac (untested)
