--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+2020-06-11 0.1.2
+  * Fix previous release
+
+
 2020-06-11 0.1.1
   * Fix potential installation issue due to importing txs during installation
 
